_deploy/player-merge-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: player-merge
  namespace: baseball
  labels:
    app: player-merge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: player-merge
  template:
    metadata:
      labels:
        app: player-merge
    spec:
      containers:
      - name: player-merge
        image: nschultz/fantasy-baseball-player-merge:0.5.2
        ports:
          - name: web
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
